--- a/B2B_App/project.json
+++ b/B2B_App/project.json
@@ -1,9 +1,12 @@
-{
+﻿{
   "dependencies": {
+    "bootstrap": "4.0.0-alpha2",
+    "EntityFramework": "6.1.3",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
-    "Newtonsoft.Json": "8.0.3",
-    "Template10": "1.1.*"
+    "Newtonsoft.Json": "9.0.1",
+    "NUnit": "3.4.1",
+    "Template10": "1.1.11"
   },
   "frameworks": {
     "uap10.0": {}
