--- a/B2B_App/project.json
+++ b/B2B_App/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha2",
     "EntityFramework": "6.1.3",
+    "Microsoft.AspNet.WebApi.Client": "5.2.3",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Newtonsoft.Json": "9.0.1",
