--- a/B2B_App/B2B_App.csproj
+++ b/B2B_App/B2B_App.csproj
@@ -109,8 +109,12 @@
     </Compile>
     <Compile Include="Models\APA\Configuration\CommonConfig.cs" />
     <Compile Include="Models\APA\Configuration\CommonConfigurationModel.cs" />
+    <Compile Include="Models\APA\Configuration\Database.cs" />
+    <Compile Include="Models\APA\Configuration\HtmlTags.cs" />
+    <Compile Include="Models\APA\Configuration\RemoteSave.cs" />
     <Compile Include="Models\APA\Configuration\Template.cs" />
     <Compile Include="Models\APA\Configuration\TemplateConfigModel.cs" />
+    <Compile Include="Models\APA\Configuration\TemplateTable.cs" />
     <Compile Include="Models\APA\Schemas\CommonConfiguration1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -249,10 +253,9 @@
     <Folder Include="Models\B2B\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FTP_Client\FTP_Client.csproj">
-      <Project>{a3f794ac-490d-4017-ae5a-929200d1552a}</Project>
-      <Name>FTP_Client</Name>
-    </ProjectReference>
+    <Reference Include="MySql.Data.RT">
+      <HintPath>C:\Program Files (x86)\MySQL\Connector.NET 6.9\Assemblies\RT\MySql.Data.RT.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
