--- a/B2B_App/B2B_App.csproj
+++ b/B2B_App/B2B_App.csproj
@@ -95,11 +95,13 @@
       <SubType>Designer</SubType>
       <LastGenOutput>CommonConfiguration1.Designer.cs</LastGenOutput>
       <Generator>xsd2codecustomtool</Generator>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Models\APA\Schemas\WebsitesTemplate.xsd">
       <SubType>Designer</SubType>
-      <Generator>xsd2codecustomtool</Generator>
       <LastGenOutput>WebsitesTemplate1.Designer.cs</LastGenOutput>
+      <Generator>xsd2codecustomtool</Generator>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="project.json" />
   </ItemGroup>
@@ -121,11 +123,13 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CommonConfiguration.xsd</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Models\APA\Schemas\WebsitesTemplate1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>WebsitesTemplate.xsd</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SettingsServices\SettingsService.cs" />
