need finishing loading in templates to page from object

--- a/MyDatabase/MyDatabase.csproj
+++ b/MyDatabase/MyDatabase.csproj
@@ -107,7 +107,9 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database.cs" />
+    <Compile Include="Database.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateTable.cs" />
     <EmbeddedResource Include="Properties\MyDatabase.rd.xml" />
