--- a/B2B_App/B2B_App.csproj
+++ b/B2B_App/B2B_App.csproj
@@ -132,9 +132,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectionChangedConverter .cs" />
     <Compile Include="Services\SettingsServices\SettingsService.cs" />
     <Compile Include="ViewModels\APA\ACommonConfigModelView.cs" />
     <Compile Include="ViewModels\APA\AMainPageViewModel.cs" />
+    <Compile Include="ViewModels\APA\APrefListViewModel.cs" />
+    <Compile Include="ViewModels\APA\AResultViewModel.cs" />
     <Compile Include="ViewModels\APA\ATemplateConfigViewModel.cs" />
     <Compile Include="ViewModels\B2B\MainPageViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
