--- a/B2B_App/B2B_App.csproj
+++ b/B2B_App/B2B_App.csproj
@@ -112,7 +112,9 @@
     <Compile Include="Models\APA\Configuration\CommonConfig.cs" />
     <Compile Include="Models\APA\Configuration\CommonConfigurationModel.cs" />
     <Compile Include="Models\APA\Configuration\HtmlTags.cs" />
+    <Compile Include="Models\APA\Configuration\PrefListModel.cs" />
     <Compile Include="Models\APA\Configuration\RemoteSave.cs" />
+    <Compile Include="Models\APA\Configuration\Route.cs" />
     <Compile Include="Models\APA\Configuration\Template.cs" />
     <Compile Include="Models\APA\Configuration\TemplateAdditionalInfo.cs" />
     <Compile Include="Models\APA\Configuration\TemplateCommonInfo.cs" />
@@ -275,6 +277,11 @@
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties Typemock="{&quot;UnitTestProject&quot;:&quot;d7a0986d-9919-4f15-a905-9b3e0faa7d46&quot;}" />
+    </VisualStudio>
+  </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
