--- a/B2B_App/B2B_App.csproj
+++ b/B2B_App/B2B_App.csproj
@@ -123,6 +123,8 @@
     <Compile Include="Models\APA\Configuration\TemplateSearchEngine.cs" />
     <Compile Include="Models\APA\DateTimeConverter.cs" />
     <Compile Include="Models\APA\DateTimeToStringConverter.cs" />
+    <Compile Include="Models\APA\KeyValuePairs.cs" />
+    <Compile Include="Models\APA\MainPageModel.cs" />
     <Compile Include="Models\APA\Schemas\CommonConfiguration1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -135,6 +137,7 @@
       <DependentUpon>WebsitesTemplate.xsd</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="Models\APA\SelectionChangedConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectionChangedConverter .cs" />
     <Compile Include="Services\SettingsServices\SettingsService.cs" />
@@ -190,7 +193,9 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\oneway.png" />
     <Content Include="Assets\Price Analyse.png" />
+    <Content Include="Assets\roundtrip.png" />
     <Content Include="Help.htm" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
