--- a/MyDatabase/MyDatabase.csproj
+++ b/MyDatabase/MyDatabase.csproj
@@ -47,6 +47,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <GenerateLibraryLayout>false</GenerateLibraryLayout>
+    <DocumentationFile>bin\x86\Debug\MyDatabase.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <PlatformTarget>x86</PlatformTarget>
